--- a/html.html
+++ b/html.html
@@ -17,7 +17,7 @@
 
         <div class="col-11 jugador">
             <p class="Titulo">Vinicius</p>
-            <img src="IMG/viniciusImg1.jpg" class="IMGjugador" alt="x">
+            <img src="IMG/viniciusImg1" class="IMGjugador rounded mx-auto d-block img-thumbnail" alt="x">
             <p>Vinícius de Olivera Júnior, mejor conocido como Vinícius Júnior
                 (São Gonçalo, Río de Janeiro, 12 de julio de 2000), es un futbolista
                 hispano-brasileño que juega como delantero en
@@ -89,7 +89,7 @@
 
         <div class="col-11 jugador">
             <p class="Titulo">Benzema</p>
-            <img src="IMG/benzemaimg1.jpg" class="IMGjugador" alt="x">
+            <img src="IMG/benzemaimg1.jpg" class="IMGjugador rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Karim Benzema (Lyon, Ródano-Alpes, 19 de diciembre de 1987) es un futbolista
                 francés de ascendencia argelina5​6​ que juega como delantero en el Real Madrid Club
@@ -174,7 +174,7 @@
 
         <div class="col-11 jugador">
             <p class="Titulo">Cristiano Ronaldo</p>
-            <img src="IMG/ronaldoimg1.jpg" class="IMGjugador" alt="x">
+            <img src="IMG/ronaldoimg1.jpg" class="IMGjugador rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Cristiano Ronaldo dos Santos Aveiro(Funchal, Madeira; 5 de febrero de 1985), más
                 conocido como Cristiano Ronaldo o CR7, es un futbolista portugués que juega como
@@ -272,7 +272,7 @@
 
         <div class="col-11 jugador">
             <p class="Titulo">Mbappe</p>
-            <img src="IMG/mbappeimg1.jpg" class="IMGjugador" alt="x">
+            <img src="IMG/mbappeimg1.jpg" class="IMGjugador rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Kylian Mbappé (París, Isla de Francia, 	20 de diciembre de 1998) es un futbolista francés de
                 ascendencia argelina y camerunesa que juega como delantero en el Paris Saint-Germain
@@ -349,7 +349,7 @@
 
         <div class="col-11 jugador">
             <p class="Titulo">Messi</p>
-            <img src="IMG/messiimg1.jpg" class="IMGjugador" alt="x">
+            <img src="IMG/messiimg1.jpg" class="IMGjugador rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Lionel Andrés Messi Cuccittini (Rosario, Santa Fe; 24 de junio de 1987), conocido como Leo
                 Messi, es un futbolista argentino que juega como delantero o centrocampista en el Paris
@@ -439,7 +439,7 @@
         <div class="h1 col-11">Información de cada equipo</div>
 
         <div class="col-11 equipo" id="madrid">
-            <img class="escudo" src="IMG/escudomadrid.jpg" alt="x">
+            <img class="escudo" src="IMG/escudomadrid.jpg rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Club de fútbol procendente de España que se situa entre los mas punteros de Europa y del mundo, destaca por
                 su amplio número de champions(13)
@@ -449,7 +449,7 @@
 
 
         <div class=" col-11 equipo" id="psg">
-            <img class="escudo" src="IMG/escudopsg.jpg" alt="x">
+            <img class="escudo" src="IMG/escudopsg.jpg rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Club de fútbol procendente de Francia que se situa entre los mas punteros de Europa y del mundo, destaca por
                 su amplio número de estrellas reunidas en una misma plantilla (Messi,Mbappe,Neymar,Ramos......)
@@ -459,7 +459,7 @@
 
 
         <div class="col-11 equipo" id="united">
-            <img class="escudo" src="IMG/escudounited.jpg" alt="x">
+            <img class="escudo" src="IMG/escudounited.jpg rounded mx-auto d-block img-thumbnail" alt="x">
             <p>
                 Club de fútbol procendente de Inglaterra que se situa entre los mas punteros de Europa y del mundo, destaca por
                 su amplio número de estrellas reunidas en una misma plantilla (Messi,Mbappe,Neymar,Ramos......)
